<resources>
    <string name="app_name">WW:TEM</string>
    <string name="title_1">Wuthering Wave</string>
    <string name="title_2">THE ECHO MEMORY</string>
    <string name="level_easy">Easy</string>
    <string name="level_normal">Normal</string>
    <string name="level_hard">Hard</string>
    <string name="life">Life Coin:</string>
    <string name="restart">Restart</string>
    <string name="level_title">» Choose Your Level «</string>
    <string name="dialog_title">Thông Báo</string>
    <string name="dialog_btn_text">OK</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="quit">Quit</string>
    <string name="music_on">Music: On</string>
    <string name="music_off">Music: Off</string>
    <string name="play_time">Play Time: </string>
</resources>